# jasg-pp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: config.hpp  main.cpp
src/logic/: birb.hpp  game.cpp  game.hpp  position.cpp  position.hpp
src/ui/: render_birbs.cpp  render_birbs.hpp  render_board.cpp  render_board.hpp  render_game.cpp  render_game.hpp  render_grid.hpp
